Add day 1 for 2022